--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,3 @@
-.App {
-  font-family: Arial, sans-serif;
-  text-align: center;
-}
-
-h1 {
-  color: #333;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  padding: 5px;
-  background-color: #f4f4f4;
-  margin: 5px 0;
-  border-radius: 5px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
